# GraphicsWrapper

./: CMakeLists.txt  CMakePresets.json  GraphicsWrapper.sln  GraphicsWrapper.vcxproj  GraphicsWrapper.vcxproj.filters  Main.cpp  TestMain.cpp
Graphics/: BufferDataLayouts.h  Camera.cpp  Camera.h  Common.h  DeviceFunctionTable.h  Enums.h  FeatureEnum.h  Flags.h  FunctionTable.h  InstanceFunctionTable.h  MemoryPropertyEnum.h  PropertyEnum.h  QueuePropertyEnum.h  StructTraits.h  Structs.h
Graphics/DeviceCaching/: PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceCache.cpp  PhysicalDeviceCache.h  QueueFamily.cpp  QueueFamily.h
Graphics/MemoryManagement/: Buffer.cpp  Buffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Image.cpp  Image.h  MappedMemory.cpp  MappedMemory.h  Memory.cpp  Memory.h  MemoryPool.h  PixelData.cpp  PixelData.h
Graphics/PlatformManagement/: Window.cpp  Window.h
Graphics/Rendering/: AllocatorExample.cpp  CommandBuffer.cpp  CommandPool.cpp  Device.cpp  Fence.cpp  Instance.cpp  MeshPipeline.cpp  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Semaphore.cpp  Shader.cpp  SwapChain.cpp  SwapChainFormat.cpp
Graphics/Wrappers/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Memory.cpp  Memory.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceCache.cpp  PhysicalDeviceCache.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  ShaderModule.cpp  ShaderModule.h  (+6 more)
Graphics/Wrappers/TaskTables/: FeatureEnum.h  FeatureTaskTables.cpp  PhysicalDeviceCacheTaskTables.cpp  PropertyEnum.h  PropertyTaskTables.cpp  QueuePropertyEnum.h  QueuePropertyTaskTables.cpp
Graphics/Wrappers/Utility/: ResourceManager.h  Structs.h  Utility.cpp  Utility.h
Shaders/: basic.frag  basic.vert  basic.vert.spv  compile.bat
depr/src/: main.cpp
depr/src/Graphics/HandleTypes/: Buffer.cpp  (+20 more)
include/Graphics/: Camera.h  Common.h  Enums.h  FunctionPointers.h  Graphics.h  HandleStructs.h  InstanceFunctionTable.h  MemoryPropertyEnum.h  StructTraits.h
include/Graphics/HandleTypes/: CommandBuffer.h  CommandPool.h  DebugUtilsMessenger.h  DescriptorPool.h  DescriptorSet.h  Device.h  Fence.h  Instance.h  PhysicalDeviceCache.h  Pipeline.h  Sampler.h  Surface.h  SwapChain.h
include/Graphics/MemoryManagement/: MemoryPool.h
include/Graphics/PlatformManagement/: WindowWin32.h
include/Graphics/Rendering/: CommandBuffer.h  CommandPool.h  Device.h  Fence.h  Instance.h  Pipeline.h  Queue.h  Sampler.h  Semaphore.h  Shader.h  VulkanAllocator.h
include/Graphics/TaskTables/: PropertyEnum.h
include/Graphics/Utility/: BufferDataBuilders.h  ResourceManager.h
include/Graphics/Wrappers/: DebugLogger.h
install/: GraphicsWrapperConfig.cmake.in
src/: Camera.cpp  main.cpp
src/Graphics/HandleTypes/: CommandPool.cpp  Device.cpp  Fence.cpp  Image.cpp  Instance.cpp  Memory.cpp  PhysicalDevice.cpp  PhysicalDeviceCache.cpp  Pipeline.cpp  Queue.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  SwapChain.cpp
src/Graphics/PlatformManagement/: WindowWin32.cpp
src/Graphics/TaskTables/: FeatureTaskTables.cpp  PhysicalDeviceCacheTaskTables.cpp  PropertyTaskTables.cpp  QueuePropertyTaskTables.cpp
src/Graphics/Utility/: PixelData2D.cpp  Utility.cpp
src/Graphics/Wrappers/: DebugLogger.cpp  DeviceWrapper.cpp  InstanceWrapper.cpp
(+39 files in other folders)
